# QR-Hardware-Wallet

./: README.md  partitions.csv  sdkconfig.defaults
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yaml  hardware.yaml  security.yaml  usability.yaml
components/qrcode_protocol/: qrcode_protocol.cpp  qrcode_protocol.h
components/transaction_factory/: transaction_factory.cpp  transaction_factory.h
components/wallet/: wallet.cpp  wallet.h
main/: CMakeLists.txt  idf_component.yml  lv_conf.h  peripherals.h
main/include/: alloc_utils.h  app.h  app_backlight.h  kv_fs.h  wallet_db.h
main/include/controller/: ctrl_home.h  ctrl_init.h  ctrl_sign.h  ctrl_wizard.h
main/include/ui/: ui_connect_qrcode.h  ui_decoder.h  ui_erase.h  ui_events.h  ui_home.h  ui_master_page.h  ui_mnemonic.h  ui_panic.h  ui_pin.h  ui_qr_code.h  ui_style.h  ui_wizard.h
main/src/: app.c  app_backlight.c  app_peripherals.c  kv_fs.c  wallet_db.c
main/src/controller/: ctrl_home.c  ctrl_init.c  ctrl_sign.c  ctrl_wizard.c
main/src/ui/: ui_connect_qrcode.c  ui_decoder.c  ui_erase.c  ui_events.c  ui_home.c  ui_master_page.c  ui_mnemonic.c  ui_panic.c  ui_pin.c  ui_qr_code.c  ui_sign.c  ui_wizard.c
